// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree 2: Post-order - reversed 1`] = `
Array [
  "A",
  "C",
  "E",
  "D",
  "B",
  null,
  "H",
  null,
  "I",
  "G",
  "F",
]
`;

exports[`Tree 2: Post-order - reversed 2`] = `
Array [
  Object {
    "options": Object {
      "isLeafVertex": true,
      "isRootVertex": false,
      "previousVisitedVertex": null,
      "visitIndex": 0,
    },
    "vertex": Object {
      "$c": Array [],
      "$d": "A",
    },
  },
  Object {
    "options": Object {
      "isLeafVertex": true,
      "isRootVertex": false,
      "previousVisitedVertex": Object {
        "$c": Array [],
        "$d": "A",
      },
      "visitIndex": 1,
    },
    "vertex": Object {
      "$c": Array [],
      "$d": "C",
    },
  },
  Object {
    "options": Object {
      "isLeafVertex": true,
      "isRootVertex": false,
      "previousVisitedVertex": Object {
        "$c": Array [],
        "$d": "C",
      },
      "visitIndex": 2,
    },
    "vertex": Object {
      "$c": Array [],
      "$d": "E",
    },
  },
  Object {
    "options": Object {
      "isLeafVertex": false,
      "isRootVertex": false,
      "previousVisitedVertex": Object {
        "$c": Array [],
        "$d": "E",
      },
      "visitIndex": 3,
    },
    "vertex": Object {
      "$c": Array [
        "C",
        "E",
      ],
      "$d": "D",
    },
  },
  Object {
    "options": Object {
      "isLeafVertex": false,
      "isRootVertex": false,
      "previousVisitedVertex": Object {
        "$c": Array [
          "C",
          "E",
        ],
        "$d": "D",
      },
      "visitIndex": 4,
    },
    "vertex": Object {
      "$c": Array [
        "A",
        "D",
      ],
      "$d": "B",
    },
  },
  Object {
    "options": Object {
      "isLeafVertex": true,
      "isRootVertex": false,
      "previousVisitedVertex": Object {
        "$c": Array [
          "A",
          "D",
        ],
        "$d": "B",
      },
      "visitIndex": 5,
    },
    "vertex": Object {
      "$c": Array [],
      "$d": null,
    },
  },
  Object {
    "options": Object {
      "isLeafVertex": true,
      "isRootVertex": false,
      "previousVisitedVertex": Object {
        "$c": Array [],
        "$d": null,
      },
      "visitIndex": 6,
    },
    "vertex": Object {
      "$c": Array [],
      "$d": "H",
    },
  },
  Object {
    "options": Object {
      "isLeafVertex": true,
      "isRootVertex": false,
      "previousVisitedVertex": Object {
        "$c": Array [],
        "$d": "H",
      },
      "visitIndex": 7,
    },
    "vertex": Object {
      "$c": Array [],
      "$d": null,
    },
  },
  Object {
    "options": Object {
      "isLeafVertex": false,
      "isRootVertex": false,
      "previousVisitedVertex": Object {
        "$c": Array [],
        "$d": null,
      },
      "visitIndex": 8,
    },
    "vertex": Object {
      "$c": Array [
        "H",
        null,
      ],
      "$d": "I",
    },
  },
  Object {
    "options": Object {
      "isLeafVertex": false,
      "isRootVertex": false,
      "previousVisitedVertex": Object {
        "$c": Array [
          "H",
          null,
        ],
        "$d": "I",
      },
      "visitIndex": 9,
    },
    "vertex": Object {
      "$c": Array [
        null,
        "I",
      ],
      "$d": "G",
    },
  },
  Object {
    "options": Object {
      "isLeafVertex": false,
      "isRootVertex": true,
      "previousVisitedVertex": Object {
        "$c": Array [
          null,
          "I",
        ],
        "$d": "G",
      },
      "visitIndex": 10,
    },
    "vertex": Object {
      "$c": Array [
        "B",
        "G",
      ],
      "$d": "F",
    },
  },
]
`;

exports[`Tree 2: Post-order - reversed 3`] = `
Object {
  "resolvedTreeMap": Map {
    Object {
      "$c": Array [
        "B",
        "G",
      ],
      "$d": "F",
    } => Array [
      Object {
        "$c": Array [
          "A",
          "D",
        ],
        "$d": "B",
      },
      Object {
        "$c": Array [
          null,
          "I",
        ],
        "$d": "G",
      },
    ],
    Object {
      "$c": Array [
        "A",
        "D",
      ],
      "$d": "B",
    } => Array [
      Object {
        "$c": Array [],
        "$d": "A",
      },
      Object {
        "$c": Array [
          "C",
          "E",
        ],
        "$d": "D",
      },
    ],
    Object {
      "$c": Array [
        "C",
        "E",
      ],
      "$d": "D",
    } => Array [
      Object {
        "$c": Array [],
        "$d": "C",
      },
      Object {
        "$c": Array [],
        "$d": "E",
      },
    ],
    Object {
      "$c": Array [
        null,
        "I",
      ],
      "$d": "G",
    } => Array [
      Object {
        "$c": Array [],
        "$d": null,
      },
      Object {
        "$c": Array [
          "H",
          null,
        ],
        "$d": "I",
      },
    ],
    Object {
      "$c": Array [
        "H",
        null,
      ],
      "$d": "I",
    } => Array [
      Object {
        "$c": Array [],
        "$d": "H",
      },
      Object {
        "$c": Array [],
        "$d": null,
      },
    ],
  },
  "rootVertex": Object {
    "$c": Array [
      "B",
      "G",
    ],
    "$d": "F",
  },
  "vertexContextMap": Map {
    Object {
      "$c": Array [
        "B",
        "G",
      ],
      "$d": "F",
    } => null,
    Object {
      "$c": Array [
        "A",
        "D",
      ],
      "$d": "B",
    } => Object {
      "hint": "B",
      "parentVertex": Object {
        "$c": Array [
          "B",
          "G",
        ],
        "$d": "F",
      },
      "vertexHintOriginalOrderIndex": 0,
      "vertexHintTraversalOrderIndex": 0,
    },
    Object {
      "$c": Array [],
      "$d": "A",
    } => Object {
      "hint": "A",
      "parentVertex": Object {
        "$c": Array [
          "A",
          "D",
        ],
        "$d": "B",
      },
      "vertexHintOriginalOrderIndex": 0,
      "vertexHintTraversalOrderIndex": 0,
    },
    Object {
      "$c": Array [
        "C",
        "E",
      ],
      "$d": "D",
    } => Object {
      "hint": "D",
      "parentVertex": Object {
        "$c": Array [
          "A",
          "D",
        ],
        "$d": "B",
      },
      "vertexHintOriginalOrderIndex": 1,
      "vertexHintTraversalOrderIndex": 1,
    },
    Object {
      "$c": Array [],
      "$d": "C",
    } => Object {
      "hint": "C",
      "parentVertex": Object {
        "$c": Array [
          "C",
          "E",
        ],
        "$d": "D",
      },
      "vertexHintOriginalOrderIndex": 0,
      "vertexHintTraversalOrderIndex": 0,
    },
    Object {
      "$c": Array [],
      "$d": "E",
    } => Object {
      "hint": "E",
      "parentVertex": Object {
        "$c": Array [
          "C",
          "E",
        ],
        "$d": "D",
      },
      "vertexHintOriginalOrderIndex": 1,
      "vertexHintTraversalOrderIndex": 1,
    },
    Object {
      "$c": Array [
        null,
        "I",
      ],
      "$d": "G",
    } => Object {
      "hint": "G",
      "parentVertex": Object {
        "$c": Array [
          "B",
          "G",
        ],
        "$d": "F",
      },
      "vertexHintOriginalOrderIndex": 1,
      "vertexHintTraversalOrderIndex": 1,
    },
    Object {
      "$c": Array [],
      "$d": null,
    } => Object {
      "hint": null,
      "parentVertex": Object {
        "$c": Array [
          null,
          "I",
        ],
        "$d": "G",
      },
      "vertexHintOriginalOrderIndex": 0,
      "vertexHintTraversalOrderIndex": 0,
    },
    Object {
      "$c": Array [
        "H",
        null,
      ],
      "$d": "I",
    } => Object {
      "hint": "I",
      "parentVertex": Object {
        "$c": Array [
          null,
          "I",
        ],
        "$d": "G",
      },
      "vertexHintOriginalOrderIndex": 1,
      "vertexHintTraversalOrderIndex": 1,
    },
    Object {
      "$c": Array [],
      "$d": "H",
    } => Object {
      "hint": "H",
      "parentVertex": Object {
        "$c": Array [
          "H",
          null,
        ],
        "$d": "I",
      },
      "vertexHintOriginalOrderIndex": 0,
      "vertexHintTraversalOrderIndex": 0,
    },
    Object {
      "$c": Array [],
      "$d": null,
    } => Object {
      "hint": null,
      "parentVertex": Object {
        "$c": Array [
          "H",
          null,
        ],
        "$d": "I",
      },
      "vertexHintOriginalOrderIndex": 1,
      "vertexHintTraversalOrderIndex": 1,
    },
  },
}
`;
